--- a/cart.html
+++ b/cart.html
@@ -56,7 +56,7 @@
         <div class="cart">
             
         </div> 
-        <div class="cart center">
+        <div class="cart_btn center">
             <button id="btn_proceed" class="btn btn-orange" role="link">Proceed</button>
             <button id="btn_home" class="btn btn-orange" role="link">Home</button>
         </div>
