--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/handlebars.js/2.0.0/handlebars.js"></script>
     <link rel="stylesheet" type="text/css" media="screen" href="css/bootstrap.css" />
 
-    <link href='http://fonts.googleapis.com/css?family=Lato:100,300,400italic' rel="stylesheet" type="text/css">
+    <link href='https://fonts.googleapis.com/css?family=Lato:100,300,400italic' rel="stylesheet" type="text/css">
 
     <link rel="stylesheet" type="text/css" media="screen" href="css/style.css" />
 
