--- a/order.html
+++ b/order.html
@@ -23,7 +23,7 @@
         <nav class="nav">
             <ul class="menu">
                 <li class="menu__list">
-                    <a href="/index.html" class="menu__link">Home</a>
+                    <a href="index.html" class="menu__link">Home</a>
                 </li>
                 <li class="menu__list">
                     <a href="#" class="menu__link">Breakfast</a>
